# numancy

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/numancy/: Cargo.toml  README.md
crates/numancy-cli/: Cargo.toml
crates/numancy-cli/src/: main.rs
crates/numancy/src/: address.rs  alphabet.rs  cabalistic.rs  chart.rs  compatibility.rs  cycles.rs  date.rs  error.rs  lib.rs  name.rs  pyramid.rs  pythagorean.rs  reduction.rs  signature.rs
crates/numancy/tests/: cabalistic_vectors.rs  pythagorean_vectors.rs
scripts/: semantic-release-squash-analyzer.cjs  semantic-release-squash-notes.cjs  set-cargo-version.py
