[package]
name = "numancy-cli"
description = "Command-line interface for the numancy numerology library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "numancy"
path = "src/main.rs"

[dependencies]
numancy = { path = "../numancy" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
